--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <div><p>inside a div </p></div>
 <div><p>this is a new feature(dropdown)</p></div>
-<div><p>this is a new feature(button)</p></div>
+<div><p>this is a new feature(button and second button)</p></div>
